# bbl_parser

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CRATE_MIGRATION_SUCCESS.md  CRATE_USAGE.md  Cargo.toml  FRAMES.md  GOALS.md  LICENSE  LICENSE_COMMERCIAL  OVERVIEW.md  Overview.md  README.md  Readme.md  build.rs
.github/: copilot-instructions.md  pre-commit-hook.sh  setup-dev.sh
.github/instructions/: rust-project.instructions.md
.github/workflows/: ci.yml  github-release.yml  release.yml  security.yml
INFORMATION/: 2025-07-09_BLACKBOX_DECODE_CSV_COMPATIBILITY_ANALYSIS.md  2025-07-09_CSV_EXPORT_FRAME_PROCESSING.md  2025-07-09_FRAME_PARSING_ERROR_RECOVERY_ANALYSIS.md  2025-07-09_LONG_FLIGHT_PARSING_COMPLETE.md  2025-07-09_PNG_RENDERING_FIX.md
examples/: README.md  bbl_crate_test.rs  csv_export.rs  event_export.rs  export_demo.rs  gpx_export.rs  multi_export.rs  multi_flight_export.rs  test_crate_gps.rs
src/: bbl_format.rs  conversion.rs  error.rs  export.rs  filters.rs  lib.rs  main.rs  skipped_frames.rs
src/parser/: decoder.rs  event.rs  frame.rs  gps.rs  header.rs  helpers.rs  main.rs  mod.rs  stream.rs
src/types/: frame.rs  gps.rs  header.rs  log.rs  mod.rs
tests/: csv_output_tests.rs  export_integration_tests.rs
